2007-03-11  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* patch from akira yamada for administration of don_attachment.
	- donrails/app/models/don_attachment.rb
	- donrails/app/models/picture.rb
	- donrails/app/controllers/notes_controller.rb
	- donrails/app/controllers/login_controller.rb
	- donrails/app/views/shared/attachments/picture.rhtml
	- donrails/app/views/login/manage_don_attachment.rhtml
	- donrails/app/views/login/manage_picture_detail.rhtml
	- donrails/app/views/login/manage_don_attachment_detail.rhtml
	- donrails/app/views/login/manage_picture.rhtml
	
	* donrails/app/views/layouts/login.rhtml: Add donrails bookmarklet.
	* donrails/app/views/login/new_article.rhtml: Change to apply for bookmarklet.
	* donrails/app/controllers/login_controller.rb (LoginController::bm): New method which catches input from bookmarklet. And some redirection fix.

2007-03-10  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/donrails-setup.rb: add line change.(Report by akira yamada)

2007-03-09  akira yamada  <akira@arika.org>

	* donrails/tool/td2db.rb (TDiary::Dummy): remove duplicated methods.

2007-02-20  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/shared/table_trackback.rhtml: Change: You can report to akismet via Ajax link.
	* donrails/app/controllers/login_controller.rb 
	(LoginController::akismet_report): Add to apply it.
	(LoginController::table_trackback_a): Add to apply it.

	* donrails/app/views/layouts/default/notes.rhtml: add "effects" and "controls" javascript link.

	* README.cache.ja: Add information to test caching.
	* donrails/app/views/login/manage_{category,trackback}.rhtml: Small fix

	* donrails/example/database-mysqltest.yml: New file
	* Makefile: Add "make mysqltest" (*TODO*)
	
2007-02-18  Akira TAGOH  <at@gclab.org>

	* Makefile: Make a symlink for test dir to be rake-test-ready.

	* donrails/tool/tables-postgresql.sql: set default value to
	notify_level.

	* donrails/tool/tables-mysql.sql: add notify_level to don_envs.
