@@ -21,33 +21,36 @@
 <body>
 <div id="page">
 <div class="head">
-<%= link_to "トップ", {:action => "index", :controller => "notes"} %>/
-<%= link_to "日記", {:action => "noteslist", :controller => "notes"} %>/ 
-<%= link_to "ログアウト", {:action => "logout"} %>
-<br>
-<%= link_to "ログイン", {:action => "index"} %>/
-<%= link_to "バージョン管理", {:action => "manage_enrollment"} %>/
-<%= link_to "記事追加", {:action => "new_article"} %>/
-<%= link_to "記事管理", {:action => "manage_article"} %>/
-<%= link_to "画像ファイル管理", {:action => "manage_picture"} %>/
-<%= link_to "コメント管理", {:action => "manage_comment"} %>/
-<%= link_to "カテゴリ管理", {:action => "manage_category"} %>/
-<%= link_to "トラックバック管理", {:action => "manage_trackback"} %>/
-<%= link_to "ブラックリスト管理", {:action => "manage_banlist"} %>/
-<%= link_to "投稿者管理", {:action => "manage_author"} %>/
-<%= link_to "Ping先管理", {:action => "manage_blogping"} %>/
-<%= link_to "Ping履歴", {:action => "manage_don_ping"} %>/
-<%= link_to "RBL設定", {:action => "manage_don_rbl"} %>/
-<%= link_to "基本設定", {:action => "manage_don_env"} %>/
-<%= link_to "キャッシュ消去", {:action => "manage_cache"} %>/
-<%= link_to "(hnf保存)", {:action => "hnf_save_all"}, :confirm => "Really login for save hnf files?" %>/
-<br>
-<a href="javascript:location.href='<%= @request.protocol + @request.host_with_port + url_for(:controller => 'login', :action => 'bm', :f => 'add') %>&text='+encodeURIComponent(document.getSelection())+'&url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title)">donrails bookmarklet</a>
+  <%= link_to "トップ", {:action => "index", :controller => "notes"} %>/
+  <%= link_to "日記", {:action => "noteslist", :controller => "notes"} %>/ 
+  <%= link_to "ログアウト", {:action => "logout"} %>/
+  <%= link_to "ログイン", {:action => "index"} %>/
+  <%= link_to "記事追加", {:action => "new_article"} %>/
+  <br>
+  <%= link_to "バージョン管理", {:action => "manage_enrollment"} %>/
+  <%= link_to "記事管理", {:action => "manage_article"} %>/
+  <%= link_to "画像ファイル管理", {:action => "manage_picture"} %>/
+  <%= link_to "添付データ管理", {:action => "manage_don_attachment"} %>/
+  <%= link_to "カテゴリ管理", {:action => "manage_category"} %>
+  <br>
+  <%= link_to "コメント管理", {:action => "manage_comment"} %>/
+  <%= link_to "トラックバック管理", {:action => "manage_trackback"} %>/
+  <%= link_to "ブラックリスト管理", {:action => "manage_banlist"} %>/
+  <%= link_to "RBL設定", {:action => "manage_don_rbl"} %>
+  <br>
+  <%= link_to "基本設定", {:action => "manage_don_env"} %>/  
+  <%= link_to "投稿者管理", {:action => "manage_author"} %>/
+  <%= link_to "Ping先管理", {:action => "manage_blogping"} %>/
+  <%= link_to "Ping履歴", {:action => "manage_don_ping"} %>/
+  <%= link_to "キャッシュ消去", {:action => "manage_cache"} %>/
+  <%= link_to "(hnf保存)", {:action => "hnf_save_all"}, :confirm => "Really login for save hnf files?" %>/
+  <br>
+  <a href="javascript:location.href='<%= @request.protocol + @request.host_with_port + url_for(:controller => 'login', :action => 'bm', :f => 'add') %>&text='+encodeURIComponent(document.getSelection())+'&url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title)">donrails bookmarklet</a>
   
 </div> <!-- end of class:head -->
 
 <div id="content">
-<%= @content_for_layout %>
+  <%= @content_for_layout %>
 </div> <!-- id:content -->
 </div> <!-- id:page -->
 
