@@ -1,4 +1,4 @@
-<% @heading = 'don_attachment management' %>
+<% @heading = '添付データ管理' %>
 <h1>don_attachment management</h1>
 添付データの登録
 
